--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.1.0",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.10"
   },
